--- a/index.html
+++ b/index.html
@@ -93,16 +93,21 @@
                 
                         <!-- Add padding above the header -->
                         <tr>
-                            <td style="padding-top: 0px; background-color: #016554;"> <!-- Added padding-top to the <td> containing the header -->
-                                
-                    <!-- GameChanger Logo Header Section -->
-                    </td></tr><tr>
-                        <td align="center" style="padding: 20px; background-color: #016554;">
-                            <a href="https://gc.com/" target="_blank" style="text-decoration: none; display: block;">
-                                <img src="https://griffinkillion.github.io/gamechanger-images/YOUR%20GAMES%20(550%20x%20550%20px)%20(1).png" alt="GameChanger Logo" class="header-logo" width="200" style="display: block; max-width: 100%; height: auto; border: 0;">
+                            <td style="padding-top: 0; background-color: #016554;">
+                                <!-- GameChanger Logo Header Section -->
+                            </td>
+                        </tr>
+                        <tr>
+                            <td align="center" style="padding: 20px; background-color: #016554;">
+                                <a href="https://gc.com/" target="_blank" style="text-decoration: none; display: block;">
+                                    <img src="https://griffinkillion.github.io/gamechanger-images/YOUR%20GAMES%20(550%20x%20550%20px)%20(1).png" 
+                                         alt="GameChanger Logo" 
+                                         width="200" 
+                                         style="display: block; max-width: 100%; height: auto; border: 0;">
                                 </a>
-                        </td>
-                    </tr>
+                            </td>
+                        </tr>
+
 
                     <!-- Outer Container 2 -->
                         <tr>
